2006-07-07  Wsourdeau Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxAppointmentEditor.m: returns yes to "isPopup";

	* UI/WebServerResources/generic.js: added code to manage
	selections within HTML containers.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -productJavaScriptURL]):
	added method to determine the possible URL for a product-specific
	javascript filename of the forme <productname>.js.
	([UIxPageFrame -hasProductSpecificJavaScript]): new method.
	([UIxPageFrame -isPopup]): new method to determine whether the
	application navigator bar should be displayed (main page) or not
	(popup page).

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-LDAPCheckLogin:_loginpassword:_pwd]): new method to authenticate
	the user through LDAP.

2006-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* The toolbar code from the MailerUI product was taken, renamed as
	"UIxToolBar" and put into UI/Common. Toolbar plists were created
	for the Contacts and Scheduler products and put in their respectir
	Toolbars/ subdirectories. Finally,
	UI/Templates/{UIxToolbarButton,UIxToolbarSeparator}.wox, and
	UI/Common/{UIxToolbarButton,UIxToolbarSeparator}.m were removed
	and an invocation to the UIxToolbar component was put at the top
	of UI/Templaces/UIxPageFrame.wox.

	* UI/Common/UIxToolbar.m: new "isLastGroup" method to determine
	within the templates whether a separator should be displayed.

	* UI/Common/UIxToolbar.m ([UIxToolbar -hasButtons]): new method
	that returns NO if the toolbar is empty.

2006-07-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/UIxPageFrame.wox: replaced central table with a DIV.

	* UI/Common/UIxToolbarSeparator.m, UI/Common/UIxToolbarButton.m:
	new toolbar objects.

	* UI/Templates/UIxPageFrame.wox: use the exact html code as below.

	* UI/Templates/MailerUI/UIxMailMainFrame.wox: redone the
	linkbanner as a DIV instead of a TABLE.

	* UI/MailerUI/UIxMailMainFrame.m [UIxMailMainFrame
	showLinkBanner]: