@@ -1,3 +1,8 @@
+2006-07-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* UI/Common/UIxPageFrame.h: separated interface from
+	UIxPageFrame.m.
+
 2006-07-07  Wsourdeau Sourdeau  <wsourdeau@inverse.ca>
 
 	* UI/Scheduler/UIxAppointmentEditor.m: returns yes to "isPopup";
